2001-04-30  Mark Mitchell  <mark@codesourcery.com>

	* porting.texi: Use the GFDL.

2001-04-30  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/2627 
	* testsuite/24_iterators/ostreambuf_iterator.cc: New file.
	* include/bits/sbuf_iter.h (ostreambuf_iterator): Remove bogus
	specializations.

2001-04-30  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/2964
	* include/bits/stl_iterator_base_funcs.h (__advance): Fix.

2001-04-28  Phil Edwards  <pme@sources.redhat.com>

	* docs/doxygen/run_doxygen:  Minor tweaks.
	* docs/doxygen/style.css:  New file.
	* docs/doxygen/user.cfg.in:  Update using "doxygen -u" to get the
	latest parameters available.  Use style.css.

2001-04-27  Benjamin Kosnik  <bkoz@redhat.com>

	* docs/doxygen/mainpage.doxy: New.
	* docs/doxygen/user.cfg.in: Change default configuration. Single
	frame, other tweaks.

2001-04-26  Mark Mitchell  <mark@codesourcery.com>

	* docs/html/17_intro/BADNAMES: Remove EGCS reference.
	Indicate obsolete nature of thelist for G++ 3.0.

2001-04-26  Alexandre Oliva  <aoliva@redhat.com>

	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Obtain
	target_thread_file with `gcc -v'.
	* aclocal.m4, configure: Rebuilt.

2001-04-25  Benjamin Kosnik  <bkoz@redhat.com>

	* include/c_std/bits/std_cmath.h (std): Explicitly inject c99 names.
	* include/c_std/bits/std_cstdlib.h (std): Same, except for llabs.
	* include/c_std/bits/std_cwchar.h (std): Same.
	* acconfig.h (std): Remove c99 injection into std.
	* config.h.in: Regenerate.
	
	* testsuite/README: Fix typo.

	* include/bits/codecvt.h: Remove warnings.
	
2001-04-24  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

        * include/ext/slist: Include required header files. 

2001-04-23  Loren J. Rittle  <ljrittle@acm.org>

	* include/c_std/bits/std_cerrno.h (errno): Define macro from
	identifier declared with external linkage, if needed.
	* include/c_std/bits/std_csetjmp.h (setjmp): Likewise.
	* include/c_std/bits/std_cstdarg.h (va_end): Likewise.
