@@ -1,3 +1,7 @@
+2001-05-01  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* testsuite/libstdc++.tests/tests.exp: Set ulimits.
+
 2001-04-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* porting.texi: Use the GFDL.
